[package]
authors = ["picoCTF team <opensource@picoctf.org>"]
description = "OCI runtime wrapper for modifying container configs before creation"
edition = "2021"
license = "MIT"
name = "oci-interceptor"
publish = false
repository = "https://github.com/picoCTF/oci-interceptor"
version = "0.2.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.11", features = ["cargo"] }
oci-spec = "0.6.0"
serde_json = "1.0.100"

[patch.crates-io]
# TODO: waiting for post-0.6.0 release (including PR #125)
oci-spec = { git = "https://github.com/containers/oci-spec-rs", rev="bed58f053943bd80f7afb5c177c229e5f67438d7" }
