[package]
authors = [
  "Dustin Martin <dustin@dmartin.io>",
  "picoCTF team <opensource@picoctf.org>",
]
description = "OCI runtime wrapper for modifying container configs before creation"
edition = "2024"
license = "MIT OR Apache-2.0"
name = "oci-interceptor"
publish = false
repository = "https://github.com/picoCTF/oci-interceptor"
version = "0.2.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["cargo"] }
oci-spec = "0.8.1"
serde_json = "1.0.140"
